# AI-Projects

./: .gitignore  project_1.ipynb  pyproject.toml  sentence-embeddings.ipynb
RAG_tutorials/agentic-rag-with-reasoning/: TEST.py  agent_initializer.py  agentic-rag.py  config.py  knowledge_loader.py  main.py  pyproject.toml
RAG_tutorials/agentic-rag-with-reasoning/tmp/lancedb/agno_docs.lance/_transactions/: 0-9385304b-671e-4770-901a-96d277da601b.txn  1-2598e62d-8985-4200-8c92-0a12e4854983.txn  2-07e1a123-7d35-4c62-b647-5311e2f2fd7d.txn
RAG_tutorials/agentic-rag-with-reasoning/tmp/lancedb/agno_docs.lance/_versions/: 1.manifest  2.manifest  3.manifest
RAG_tutorials/agentic-rag-with-reasoning/tmp/lancedb/agno_docs.lance/data/: dc239d21-7a3c-44e8-84cb-06dc39ede2b8.lance  fabebe7e-4abe-45eb-83ad-7522f3f1fca9.lance
RAG_tutorials/agentic_rag_llama_index/: L1_Router_Engine.ipynb  main.py  pyproject.toml
RAG_tutorials/corrective_rag/: main.py  pyproject.toml
RAG_tutorials/openai_research_agent/: main.py  pyproject.toml  research-agent.py
RAG_tutorials/rag_db_routing/: agent.py  app.py  config.py  doc_loader.py  main.py  pyproject.toml  retriever.py  router.py  session_state.py  vector_db.py
RAG_tutorials/vision_rag/: app.py  embeddings.py  pdf_utils.py  pyproject.toml  qa.py  retrieval.py  utils.py
langgraph-chatbot/: chatbot.ipynb  chatbot.py  pyproject.toml
