[project]
name = "langgraph-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "graphviz>=0.21",
    "ipykernel>=6.30.1",
    "jupyterlab>=4.4.7",
    "langchain[openai]>=0.3.27",
    "langgraph>=0.6.7",
    "langsmith>=0.4.27",
    "python-call-graph>=2.1.4",
]
