[project]
name = "agentic-rag-with-reasoning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.8.1",
    "fastapi>=0.116.1",
    "lancedb>=0.25.0",
    "openai>=1.106.1",
    "streamlit>=1.49.1",
    "uvicorn>=0.35.0",
]
