[project]
name = "corrective-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.75",
    "langchain-openai>=0.3.32",
    "langgraph>=0.6.6",
    "nest-asyncio>=1.6.0",
    "numpy>=2.3.2",
    "openai>=1.106.1",
    "pydantic>=2.11.7",
    "pypdf>=6.0.0",
    "pyyaml>=6.0.2",
    "qdrant-client>=1.15.1",
    "streamlit>=1.49.1",
    "tenacity>=9.1.2",
    "tiktoken>=0.11.0",
]
