[project]
name = "openai-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agent>=0.1.3",
    "agents>=1.4.0",
    "dotenv>=0.9.9",
    "gym>=0.26.2",
    "pydantic>=2.11.7",
    "ruamel-yaml>=0.18.15",
    "streamlit>=1.49.1",
    "tensorflow>=2.20.0",
]
